fix a letter-spacing styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body {
   font-size: 16px;
   line-height: 1.8;
   color: var(--black-color);
-  letter-spacing: 0.06em;
+  letter-spacing: 0.03em;
 }
 
 .container {
@@ -73,6 +73,7 @@ body {
   letter-spacing: 1.3;
   text-transform: uppercase;
   text-align: center;
+  letter-spacing: 0.06em;
 }
 .decision_btn {
   padding: 10px 32px;
@@ -182,7 +183,7 @@ body {
 .header__navigation_item {
   font-weight: 500;
 }
-
+.header__email,
 .header__phone {
   color: var(--grey-color);
 }
@@ -249,6 +250,7 @@ body {
 .header__contacts a {
   color: inherit;
   line-height: 1.1;
+  letter-spacing: 0.02em;
 }
 
 .header__navigation_list li a:hover,
@@ -265,7 +267,7 @@ body {
   border: none;
   border-radius: 4px;
   line-height: 1.6;
-  font-size: 14px;
+  font-size: 16px;
   letter-spacing: 0.03em;
 }
 
@@ -292,11 +294,12 @@ body {
   font-weight: 700;
   color: var(--black-color);
   line-height: 1.99;
+  letter-spacing: 0.06em;
 }
 .jobs__subline {
   padding-bottom: 20px;
   color: var(--grey-color);
-  letter-spacing: 0.03em;
+
   line-height: 1.8;
 }
 .jobs__cards {
